@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2022, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,12 @@
 
 package com.hazelcast.spi.discovery.impl;
 
+import com.hazelcast.cluster.Address;
 import com.hazelcast.config.DiscoveryConfig;
 import com.hazelcast.config.DiscoveryStrategyConfig;
 import com.hazelcast.config.InvalidConfigurationException;
 import com.hazelcast.config.properties.ValidationException;
+import com.hazelcast.internal.util.ServiceLoader;
 import com.hazelcast.logging.ILogger;
 import com.hazelcast.spi.discovery.DiscoveryNode;
 import com.hazelcast.spi.discovery.DiscoveryStrategy;
@@ -27,7 +29,6 @@ import com.hazelcast.spi.discovery.DiscoveryStrategyFactory;
 import com.hazelcast.spi.discovery.NodeFilter;
 import com.hazelcast.spi.discovery.integration.DiscoveryService;
 import com.hazelcast.spi.discovery.integration.DiscoveryServiceSettings;
-import com.hazelcast.internal.util.ServiceLoader;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -41,8 +42,7 @@ import java.util.Set;
 
 import static com.hazelcast.internal.util.CollectionUtil.nullToEmpty;
 
-public class DefaultDiscoveryService
-        implements DiscoveryService {
+public class DefaultDiscoveryService implements DiscoveryService {
 
     private static final String SERVICE_LOADER_TAG = DiscoveryStrategyFactory.class.getCanonicalName();
 
@@ -67,7 +67,7 @@ public class DefaultDiscoveryService
 
     @Override
     public Iterable<DiscoveryNode> discoverNodes() {
-        Set<DiscoveryNode> discoveryNodes = new HashSet<DiscoveryNode>();
+        Set<DiscoveryNode> discoveryNodes = new HashSet<>();
         for (DiscoveryStrategy discoveryStrategy : discoveryStrategies) {
             Iterable<DiscoveryNode> candidates = discoveryStrategy.discoverNodes();
 
@@ -98,6 +98,28 @@ public class DefaultDiscoveryService
         }
     }
 
+    @Override
+    public void markEndpointAsUnhealthy(Address address) {
+        for (DiscoveryStrategy discoveryStrategy : discoveryStrategies) {
+            discoveryStrategy.markEndpointAsUnhealthy(address);
+        }
+    }
+
+    @Override
+    public Set<Address> getUnhealthyEndpoints() {
+        Set<Address> combinedAddresses = null;
+        for (DiscoveryStrategy strategy : discoveryStrategies) {
+            Set<Address> strategyAddresses = strategy.getUnhealthyEndpoints();
+            if (!strategyAddresses.isEmpty()) {
+                if (combinedAddresses == null) {
+                    combinedAddresses = new HashSet<>(strategyAddresses.size());
+                }
+                combinedAddresses.addAll(strategyAddresses);
+            }
+        }
+        return combinedAddresses == null ? Collections.emptySet() : combinedAddresses;
+    }
+
     public Iterable<DiscoveryStrategy> getDiscoveryStrategies() {
         return discoveryStrategies;
     }
@@ -116,7 +138,7 @@ public class DefaultDiscoveryService
                 }
 
                 String className = discoveryConfig.getNodeFilterClass();
-                return (NodeFilter) cl.loadClass(className).newInstance();
+                return (NodeFilter) cl.loadClass(className).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new RuntimeException("Failed to configure discovery node filter", e);
             }
@@ -132,11 +154,11 @@ public class DefaultDiscoveryService
         ClassLoader configClassLoader = settings.getConfigClassLoader();
 
         try {
-            Collection<DiscoveryStrategyConfig> discoveryStrategyConfigs = new ArrayList<DiscoveryStrategyConfig>(
+            Collection<DiscoveryStrategyConfig> discoveryStrategyConfigs = new ArrayList<>(
                     settings.getAllDiscoveryConfigs());
             List<DiscoveryStrategyFactory> factories = collectFactories(discoveryStrategyConfigs, configClassLoader);
 
-            List<DiscoveryStrategy> discoveryStrategies = new ArrayList<DiscoveryStrategy>();
+            List<DiscoveryStrategy> discoveryStrategies = new ArrayList<>();
             for (DiscoveryStrategyConfig config : discoveryStrategyConfigs) {
                 DiscoveryStrategy discoveryStrategy = buildDiscoveryStrategy(config, factories);
                 discoveryStrategies.add(discoveryStrategy);
